# Bank

./: .dockerignore  .gitignore  Makefile  Pipfile  interceptor.py  local.yml  pyproject.toml
.envs/: .env.example
config/: celery_app.py  settings.py  urls.py
config/settings/: base.py  local.py
core_apps/user_auth/: admin.py  apps.py  emails.py  forms.py  utils.py  views.py
core_apps/user_profile/: apps.py  models.py
docker/local/django/: Dockerfile  start.sh
requirements/: local.txt  production.txt
