[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["Igor Vertepny <ivertepny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
phonenumberslite = "^9.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
